Closed
Bug 230683
Opened 22 years ago
Closed 22 years ago
Font-family dropdown menu not updated
Categories
(SeaMonkey :: Composer, defect)
SeaMonkey
Composer
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: glazou, Assigned: glazou)
References
Details
Attachments
(1 file, 1 obsolete file)
|
642 bytes,
patch
|
neil
:
review+
sspitzer
:
superreview+
|
Details | Diff | Splinter Review |
1. launch seamonkey messenger
2. compose a HTML message
3. type some chars
4. switch to "Fixed width" font through the format toolbar's dropdown
5. type some more chars
6. place the caret anywhere before the fixed width chars
EXPECTED RESULT : "Variable width"
ACTUAL RESULT : "Fixed width"
That's because the getter of nsFontFaceCommand miserably fails setting the state
attribute. Fix pending.
This bug affects Seamonkey, Thunderbird and Nvu...
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Comment 2•22 years ago
|
||
Attachment #138864 -
Attachment is obsolete: true
| Assignee | ||
Updated•22 years ago
|
Attachment #138866 -
Flags: superreview?(sspitzer)
Attachment #138866 -
Flags: review?(neil.parkwaycc.co.uk)
Updated•22 years ago
|
Attachment #138866 -
Flags: review?(neil.parkwaycc.co.uk) → review+
Comment 3•22 years ago
|
||
Comment on attachment 138866 [details] [diff] [review]
better, thanks to Neil
sr=sspitzer
Attachment #138866 -
Flags: superreview?(sspitzer) → superreview+
Comment 4•22 years ago
|
||
scott would want this for the tbird branch, right?
| Assignee | ||
Comment 5•22 years ago
|
||
checked in (trunk)
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 6•22 years ago
|
||
This caused bug 231001 (and presumably broke whatever other consumers were
correctly getting that attribute as a wstring).
Comment 7•22 years ago
|
||
fixed on the M4 thunderbird branch.
Comment 8•22 years ago
|
||
*** Bug 232432 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•