Font-family dropdown menu not updated in Composer and HTML mail composition; b=230683, r=Neil, sr=sspitzer